<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kotlindemo.kotlinbase.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.kotlindemo.kotlinbase.fragments.MyProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.kotlindemo.kotlinbase.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.kotlindemo.kotlinbase.fragments.NotificationsFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.kotlindemo.kotlinbase.fragments.FaqFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.kotlindemo.kotlinbase.fragments.ContcatUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contcat_us" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.kotlindemo.kotlinbase.fragments.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />


</navigation>